@@ -2,8 +2,8 @@ Package: metrumrg
 Type: Package
 Title: Pharmacometric Tools for Data Preparation, Modeling, Simulation,
         and Reporting
-Version: 5.56
-Date: 2014-10-06
+Version: 5.57
+Date: 2014-10-20
 Author: Tim Bergsma, Bill Knebel, Leonid Gibiansky, Natalie Hsiang
 Maintainer: Tim Bergsma <timb@metrumrg.com>
 Depends: reshape, lattice, XML, MASS, methods, grid
